--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </p>
         </span>
         <span>
-          <a class="ance" href="https://sivamallala.github.io/react-weather-app/"><h3>Weather Report Website</h3></a>
+          <a class="ance" target="_blank" href="https://sivamallala.github.io/react-weather-app/"><h3>Weather Report Website</h3></a>
           <p>Developed A Weather Report Website Using React js</p>
         </span>
         <span>
